Changed Main method into ConsoleApp

--- a/UlstuScheduleParser.ConsoleApp/Templates/AuditoryScheduleTemplate.html
+++ b/UlstuScheduleParser.ConsoleApp/Templates/AuditoryScheduleTemplate.html
@@ -12,13 +12,13 @@
 <body>
     <h1>Расписание аудитории {AuditoryNumber}</h1>
     <h3>Первая неделя</h3>
-    <div class="table-responsive">
+    <!--<div class="table-responsive">-->
         {Week1}
-    </div>
+    <!--</div>-->
     <hr />
     <h3>Вторая неделя</h3>
-    <div class="table-responsive">
+    <!--<div class="table-responsive">-->
         {Week2}
-    </div>
+    <!--</div>-->
 </body>
 </html>
